# TIDAL-DL-RS

./: .gitignore  Cargo.toml  README.md
src/: config.rs  constants.rs  download.rs  main.rs  tidal_client.rs
