[package]
name = "tidal-dl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
futures = "0.3.28"
http = "0.2.9"
indicatif = "0.17.3"
lofty = "0.13.0"
reqwest = { version = "0.11.17", features = ["blocking", "json", "stream"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.96"
serde_urlencoded = "0.7.1"
tokio = { version = "1.26.0", features = ["full"] }
